README : update build error instructions

--- a/platformio.ini
+++ b/platformio.ini
@@ -18,8 +18,8 @@ framework = arduino
 lib_deps =
     https://github.com/greiman/SdFat#3b79f38
     https://github.com/me-no-dev/ESPAsyncWebServer#95dedf7
-    https://github.com/me-no-dev/ESPAsyncTCP#7e9ed22
-    https://github.com/me-no-dev/AsyncTCP#90715ae6
+    https://github.com/me-no-dev/ESPAsyncTCP#7e9ed22 #
+    https://github.com/me-no-dev/AsyncTCP#90715ae6 #
     https://github.com/ayushsharma82/AsyncElegantOTA#4b3528c
     https://github.com/alanswx/ESPAsyncWiFiManager#1c02154
     https://github.com/bblanchon/ArduinoJson#3df4efd
@@ -55,7 +55,7 @@ extends = base:esp8266
 
 # esp32dev works for the majority of ESP32 based dev boards
 # there are more specific board configurations available, feel free to send PRs adding new ones
-[env:esp32dev]
-board = esp32dev
-extends = base:esp32
+; [env:esp32dev]
+; board = esp32dev
+; extends = base:esp32
 
